Implemented router and basic page transition

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -321,3 +321,29 @@ Footer
     }
   }
 }
+
+/*
+=============== 
+Photographer
+===============
+*/
+
+.photo-gallery-photographer-container {
+  background-color: $clr-black;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-end;
+
+  .photo-gallery-photographer-main-image {
+    width: 90vw;
+    height: 100vh;
+    img {
+      transform-origin: center;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: 1s;
+    }
+  }
+}
