--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,18 +28,6 @@ Global Styles
   box-sizing: border-box;
 }
 
-.dark-theme {
-  $clr-white: #000;
-  $clr-black: #fff;
-  $clr-tint: #798dff;
-}
-
-.light-theme {
-  $clr-white: #fff;
-  $clr-black: #000;
-  $clr-tint: #f2ff79;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -50,11 +38,6 @@ body {
   line-height: 1.8;
   font-size: 0.875rem;
   font-weight: 100;
-
-  .dark-theme {
-    background-color: #000;
-    color: #fff;
-  }
 }
 ul {
   list-style-type: disc;
@@ -91,24 +74,53 @@ p {
   margin-bottom: 1.25rem;
 }
 
+.main-container {
+  width: 100vw;
+  // height: 100vh;
+  background-color: $clr-black;
+}
+
 /*
 ============================================================ 
 TRANSITIONS
 ============================================================
 */
 
-.transition {
-  position: fixed;
-  min-width: 100vw;
-  min-height: 100vh;
-  z-index: 25;
-  pointer-events: none;
+.photo-gallery-in {
+  opacity: 1;
 }
 
-.transitionUnit {
-  min-width: 100vw;
-  min-height: 25vh;
-  background-color: $clr-black;
+.photo-gallery-out {
+  opacity: 0;
+}
+
+/*
+=============== 
+Header
+===============
+*/
+header {
+  position: fixed;
+  transform: rotate(-90deg) translateX(-100%);
+  transform-origin: top left;
+  padding: 2rem;
+  z-index: 1;
+  .photo-gallery-user-name {
+    opacity: 100%;
+    transition: opacity 0.3s linear;
+
+    h1 {
+      color: $clr-white;
+      text-align: right;
+      font-weight: 100;
+      font-size: clamp(2rem, 5vw, 5rem);
+    }
+
+    &:hover {
+      opacity: 50%;
+      transition: opacity 0.3s linear;
+    }
+  }
 }
 
 /*
@@ -124,7 +136,8 @@ Main
   }
 
   width: 100vw;
-  background-color: $clr-black;
+  // height: 100vh;
+  // overflow: hidden;
 }
 
 /*
@@ -139,7 +152,7 @@ Gallery
 }
 
 .photo-gallery-grid {
-  width: 100vw;
+  width: 100%;
   display: grid;
   justify-items: flex-end;
   grid-gap: 1rem;
@@ -200,35 +213,6 @@ Type styles
 ===============
 */
 
-.photo-gallery-user-name {
-  position: fixed;
-  transform: rotate(-90deg);
-  top: 8rem;
-  left: -5rem;
-  text-align: left;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-  opacity: 100%;
-  transition: opacity 0.3s linear;
-
-  @media screen and (min-width: 992px) {
-    top: 15rem;
-    left: -12rem;
-  }
-
-  h1 {
-    color: $clr-white;
-    font-weight: 100;
-    font-size: clamp(2rem, 5vw, 5rem);
-  }
-
-  &:hover {
-    opacity: 50%;
-    transition: opacity 0.3s linear;
-  }
-}
 .photo-gallery-user-bio {
   position: absolute;
   top: 1rem;
@@ -328,22 +312,48 @@ Photographer
 ===============
 */
 
-.photo-gallery-photographer-container {
+.photographer-container {
   background-color: $clr-black;
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
+  // overflow: hidden;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 0 2rem;
 
-  .photo-gallery-photographer-main-image {
+  .photographer-main-image-container {
+    position: relative;
     width: 90vw;
     height: 100vh;
-    img {
-      transform-origin: center;
+    padding-right: 2rem;
+    display: flex;
+    justify-content: flex-end;
+    overflow: hidden;
+    will-change: transform;
+    transform-origin: center;
+    transition: 0.8s;
+
+    .photographer-main-image {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      transition: 1s;
+      will-change: transform;
+      transform: scale(1.1);
+      transform-origin: center;
+
+      img {
+        transform-origin: center;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 1s;
+      }
     }
+  }
+
+  article {
+    color: $clr-white;
+    width: 50%;
+    padding: 5rem 2rem 2rem 0;
   }
 }
